@@ -1,3 +1,10 @@
+2006-10-17  Wim Taymans  <wim@fluendo.com>
+
+	* sys/oss/gstosssink.c: (gst_oss_sink_prepare):
+	Some drivers do not support unsetting the non-blocking flag once the
+	device is opened. In those cases, close/open the device in
+	non-blocking mode. Fixes #362673.
+
 2006-10-17  Stefan Kost  <ensonic@users.sf.net>
 
 	* sys/v4l2/v4l2_calls.c: (gst_v4l2_fill_lists):
